@@ -11,6 +11,8 @@ the latest information: http://www.fastandeasyhacking.com/manual#7
   condition that was introduced with the changes in Metasploit 4.3.
 - Module description (in module launch dialog) is now resizable.
 - Added Ctrl+D keyboard shortcut to close active tab.
+- Armitage now uses (more robust) console queue for launching post
+  modules, handlers, brute force attacks, and other things.
 
 17 Apr 12
 ---------
